MSAA: Accessibility of links is wrong

https://bugs.webkit.org/show_bug.cgi?id=30928

Reviewed by Darin Adler.

WebCore:

* accessibility/AccessibilityImageMapLink.cpp:
(WebCore::AccessibilityImageMapLink::stringValueForMSAA):
Return the URL.
(WebCore::AccessibilityImageMapLink::nameForMSAA):
Return the alt text.

* accessibility/AccessibilityImageMapLink.h:
(WebCore::AccessibilityImageMapLink::isLinked):
Return true.

* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::isLinked):
(WebCore::AccessibilityObject::stringValueForMSAA):
(WebCore::AccessibilityObject::nameForMSAA):

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::isLinkable):
Return true if the element is considered "linkable" with respect to
accessibility.
(WebCore::AccessibilityRenderObject::stringValueForMSAA):
If the element is linkable, check whether it has a parent anchor
element. If so, return the anchor element's href.
(WebCore::AccessibilityRenderObject::isLinked):
Return true if the element is linkable and if it's parent anchor tag's
href is non-empty.
(WebCore::AccessibilityRenderObject::nameForMSAA):
For text nodes, return the text.

* accessibility/AccessibilityRenderObject.h:

WebKit/win:

* AccessibleBase.cpp:
(AccessibleBase::get_accState):
Check whether the element is linked, instead of whether the node is an
anchor, so the child "linkable" elements of anchor elements will also
be "linked".
(AccessibleBase::name):
Return the name for MSAA.
(AccessibleBase::value):
Return the string value for MSAA.

Canonical link: https://commits.webkit.org/41795@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50353 268f45cc-cd09-0410-ab3c-d52691b4dbfc